# SyllabusConqueror

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FocusButton.qml  FocusController.cpp  FocusController.h  FocusView.qml  Main.qml  PlanningView.qml  README.md  SessionModel.cpp  SessionModel.h  TopicModel.cpp  TopicModel.h  WindowManager.cpp  WindowManager.h  main.cpp
tests/: CMakeLists.txt  SyllabusTests.cpp
